adding azure active directory b2c authentication

--- a/CollaborativeDocEditor.Server/appsettings.json
+++ b/CollaborativeDocEditor.Server/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://nebulaactivedirectory.b2clogin.com",
+    "ClientId": "00ef4d3a-dd1b-4c87-a1ad-bd926fdb1118",
+    "CallbackPath": "/api/login/login",
+    "Domain": "NebulaActiveDirectory.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_SignUpLogIn",
+    "ResetPasswordPolicyId": "B2C_1_passwordreset",
+    "EditProfilePolicyId": "B2C_1_editprofile",
+    "ClientSecret": ""
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
